examples/type_system/failing/157_match_tuple_missing_catchall_general.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/157_match_tuple_missing_catchall_general.flx
// error[E015]: Non-Exhaustive Match
//
// Match is not exhaustive: 1 missing pattern.
//
//   examples/type_system/failing/157_match_tuple_missing_catchall_general.flx:28:14
//    |
// 28 |     let _x = match t {
//    |              ^^^^^^^^^
// 29 |         (1, true) -> 1,
//    | ^^^^^^^^^^^^^^^^^^^^^^^
// 30 |         (2, false) -> 2,
//    | ^^^^^^^^^^^^^^^^^^^^^^^^
// 31 |     }
//    | ^^^^^
//
// Hint:
//   Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E015

fn main() -> Unit {
    let t = (1, true)
    let _x = match t {
        (1, true) -> 1,
        (2, false) -> 2,
    }
}
